@@ -9,6 +9,7 @@ Revision history for Cv.pm
      * s/:nomore/-more/
      * fixed // op for perl-5.8.9
      * fixed cvHasGUI() location
+     * rewrote CV_FOURCC
 
 0.18 - 2012-11-28
      * fixed tools/dumpconst.pl
